<resources>
    <string name="app_name">HikeMap</string>

    <string name="mapbox_access_token">${MAPBOX_ACCESS_TOKEN}</string>

    <string name="title_go">Go</string>
    <string name="title_profile">Profile</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_update">Update profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Splash Activity -->
    <string name="Splash_Text">From</string>
    <string name="Splash_Title">HikeMap</string>

    <!-- StartPage Fragment -->
    <string name="Welcome_Title">Welcome!</string>
    <string name="Registration_Title">Please Join Us</string>
    <string name="Other_Title">I already have an account</string>
    <string name="Login_Title">Login</string>

    <!-- Login Fragment -->
    <string name="Or_Title">OR</string>
    <string name="Login_SignIn">Sign In</string>
    <string name="Login_ForgotPassword">Forgot Password?</string>

    <!-- Registration Fragment -->
    <string name="Registration_Text">Registration</string>
    <string name="Registration_SignUp">Sign Up</string>

    <!-- OPT_Phone Activity -->
    <string name="Opt_Phone_Title">VERIFICATION WITH OTP CODE</string>
    <string name="Opt_Phone_Code">The code has not arrived click</string>
    <string name="Opt_Phone_Button">Continue</string>

    <!-- Phone_Auth Fragment -->
    <string name="Phone_Auth_Country">Please select the prefix of your phone number</string>
    <string name="Phone_Auth_Button">Send code</string>

    <!-- Waiting Fragment -->
    <string name="Waiting_Title">Check your email address to continue</string>

    <!-- Confirm_Registration Fragment -->
    <string name="Confirm_Registration_Title">Confirm your registration</string>
    <string name="Confirm_Registration_Name">Name:</string>
    <string name="Confirm_Registration_Surname">Surname:</string>
    <string name="Confirm_Registration_Username">Username:</string>
    <string name="Confirm_Registration_Mail">E-mail:</string>
    <string name="Confirm_Registration_Text">Press next to confirm and enter the app</string>
    <string name="Confirm_Registration_Button">Next</string>
    <string name="enter_the_code">Enter the code</string>

    <!-- Some hint -->
    <string name="hint_nome">Nome</string>
    <string name="hint_cognome">Cognome</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_email_or_phone_number">Email or Phone Number</string>
    <string name="settings_menu_profile">Settings</string>
    <string name="logout_menu_profile">Logout</string>
    <string name="delete_account_menu_profile">Delete Account</string>
    <string name="change_account_settings">Change Settings</string>


    <!-- Steps Magement -->

    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="acc_sensor_not_available">Acc. sensor not available</string>
    <string name="step_detector_sensor_not_available">STEP_DETECTOR sensor not available</string>
    <string name="step_permission_denied">Step permission is denied </string>


    <string name="route">Route</string>
    <string name="timestamp">Timestamp</string>
    <string name="godetailsfragment">GoDetailsFragment</string>
    <string name="HikeDetailsFragment">HikeDetailsFragment</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="birthdate">Birthdate</string>


</resources>