<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background_shade">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationview"
        android:layout_width="160dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/confirm_otp_code" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/abel_regular"
        android:text="@string/Opt_Phone_Title"
        android:textColor="@color/colorTextLight"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <EditText
        android:id="@+id/codePhone_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/login_tab_layout"
        android:ems="10"
        android:fontFamily="@font/abel_regular"
        android:hint="@string/enter_the_code"
        android:paddingStart="20dp"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"

        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextSecondary"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Opt_Phone_Code"
        app:layout_constraintEnd_toEndOf="parent"

        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorTextLight"

        android:fontFamily="@font/abel_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codePhone_editText" />

    <Button
        android:id="@+id/codeSubmit"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/layout_login_button"
        android:fontFamily="@font/abel_regular"
        android:text="@string/Opt_Phone_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendCode" />


</androidx.constraintlayout.widget.ConstraintLayout>