<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_shade" >


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/abel_regular"
        android:text="@string/Confirm_Registration_Title"
        android:textAlignment="center"
        android:textColor="#EEE"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_Registration_Name"
        android:layout_marginBottom="5dp"
        android:textSize="15dp"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/confirmed_name"
        app:layout_constraintEnd_toEndOf="@+id/confirmed_name"
        app:layout_constraintStart_toStartOf="@+id/confirmed_name" />

    <TextView
        android:id="@+id/confirmed_name"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/abel_regular"
        android:hint="Nome"
        android:textColorHint="@color/gray"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_Registration_Surname"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmed_surname"
        app:layout_constraintEnd_toEndOf="@+id/confirmed_surname"
        app:layout_constraintStart_toStartOf="@+id/confirmed_surname" />

    <!--<TextView
        android:id="@+id/confirmed_password"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/abel_regular"
        android:hint="Password"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmed_username" />


    <TextView
        android:id="@+id/confirmed_repassword"
        android:layout_width="340dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="312dp"
        android:fontFamily="@font/abel_regular"
        android:hint="Confirm password"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent" />
-->


    <TextView
        android:id="@+id/confirmed_surname"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/abel_regular"
        android:hint="Cognome"
        android:textColorHint="@color/gray"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/confirmed_name"
        app:layout_constraintTop_toBottomOf="@+id/confirmed_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_Registration_Username"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmed_username"
        app:layout_constraintEnd_toEndOf="@+id/confirmed_username"
        app:layout_constraintStart_toStartOf="@+id/confirmed_username" />

    <TextView
        android:id="@+id/confirmed_username"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/abel_regular"
        android:hint="Username"
        android:textColorHint="@color/gray"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/confirmed_surname"
        app:layout_constraintTop_toBottomOf="@+id/confirmed_surname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_Registration_Mail"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmed_email"
        app:layout_constraintEnd_toEndOf="@+id/confirmed_email"
        app:layout_constraintStart_toStartOf="@+id/confirmed_email" />

    <TextView
        android:id="@+id/confirmed_email"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/abel_regular"
        android:hint="Email"

        android:textColorHint="@color/gray"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmed_username"
        app:layout_constraintTop_toBottomOf="@+id/confirmed_username" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abel_regular"
        android:text="@string/Confirm_Registration_Text"
        android:textAlignment="center"
        android:textColor="#EEE"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmed_email"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/confirm_registration_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_button_layout"
        android:fontFamily="@font/abel_regular"
        android:text="@string/Confirm_Registration_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.331" />
</androidx.constraintlayout.widget.ConstraintLayout>

