<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/ic_background_shade" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/Login_Title"
        android:textSize="40sp"
        android:fontFamily="@font/abel_regular"
        android:textColor="@color/colorTextLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/return_to_startPage_from_login"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow_left"

        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="212dp"
        android:layout_height="60dp"
        android:src="@drawable/or_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_button"
        app:layout_constraintVertical_bias="0.119" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="212dp"
        android:layout_height="60dp"
        android:src="@drawable/or_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_button"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Or_Title"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/access_button"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/access_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_button_layout"

        android:text="@string/Login_SignIn"
        android:textColor="@color/colorTextSecondary"

        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/abel_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.261" />



    <TextView
        android:id="@+id/forgot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"

        android:text="@string/Login_ForgotPassword"
        android:fontFamily="@font/abel_regular"
        android:textColor="@color/colorTextLight"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/google_access_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ic_google_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_log_editText1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginTop="80dp"
        android:textColorHint="@color/colorTextSecondary"
        app:hintTextColor="@color/colorTextLight"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorTextLight"
        app:errorIconTint="@color/colorError" >

        <EditText
            android:id="@+id/email_log_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_mail"
            android:drawablePadding="10dp"
            android:fontFamily="@font/abel_regular"
            android:hint="@string/hint_email"
            android:outlineSpotShadowColor="@color/colorTextLight"
            android:textColor="@color/colorTextLight"
            android:textColorLink="@color/colorError"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_log_editText1"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="32"

        android:textColorHint="@color/colorTextSecondary"
        app:hintTextColor="@color/colorTextLight"
        app:counterTextColor="@color/colorTextLight"
        app:endIconTint="@color/colorTextLight" >

        <EditText
            android:id="@+id/password_log_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/abel_regular"
            android:textColorHint="@color/colorTextLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="621dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>